src/renderer/src/styles/colors.css
:root {
  --fo-vibrancy-background: theme(colors.native.active);
  --fo-vibrancy-foreground: 0, 0%, 45%;
  --fo-text-primary: 0, 0%, 10%;

  /* TODO replace with own color */
  --fo-background: theme(colors.background);

  --fo-tooltip-background: 0, 0%, 98%;
  --fo-tooltip-foreground: 0, 0%, 10%;

  --fo-inactive: 0, 0%, 80%;
  --fo-disabled: 0, 0%, 70%;

  --fo-item-active: theme(colors.native.active/0.4);
  --fo-item-hover: theme(colors.native.active/0.2);

  --fo-modal-background: theme(colors.zinc.50/0.8);
  --fo-modal-background-opaque: theme(colors.zinc.50);
}

[data-theme="dark"] {
  --fo-vibrancy-foreground: 0, 0%, 83%;

  --fo-vibrancy-background: theme(colors.native.active);

  --fo-item-active: theme(colors.neutral.700/0.4);
  --fo-item-hover: theme(colors.native.active/0.2);
  --fo-tooltip-background: 0, 0%, 15%;
  --fo-tooltip-foreground: 0, 0%, 96%;

  --fo-inactive: 0, 0%, 50%;
  --fo-disabled: 0, 0%, 35%;

  --fo-text-primary: 0, 0%, 80%;
  --fo-background: theme(colors.background);

  --fo-modal-background: theme(colors.neutral.900/0.8);
  --fo-modal-background-opaque: theme(colors.neutral.900);
}

